updated web content

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -29,6 +29,7 @@ requirejs.config({
     },
 });
 </script>
+
 </head>
 <body>
 <div id="hft-everything">
@@ -75,11 +76,7 @@ requirejs.config({
   </div>
 </div>
 
-<script>
-      
-	
-
-    </script>
+<script></script>
 
 </body>
 </html>
