--- a/controller.html
+++ b/controller.html
@@ -1,19 +1,7 @@
-    <!-- this is inserted into index.html by build.py -->
-    <div id="dpads" class="fixheight">
-      <div id="dpadleft"></div>
-      <div id="dpadright"></div>
-    </div>
-    <div id="dpadinput">
-    </div>
-    <div id="hft-portrait" class="hft-fullsize hft-fullcenter">
-      <div class="hft-portrait-rot90">
-        <div class="hft-instruction">
-          Turn the Screen
-        </div>
-        <div class="hft-xlarge">
-          &#x21ba;
-        </div>
-      </div>
-    </div>
+    <!-- this is inserted at runtime by happyfuntimes -->
+    <span id="debugtext">swipe!</span>
+    <canvas id='canvas'></canvas>
+
+
 
 
