added start of player display on webpage

--- a/controller.html
+++ b/controller.html
@@ -1,3 +1,6 @@
     <!-- this is inserted at runtime by happyfuntimes -->
-    <span id="debugtext">swipe!</span>
-    <canvas id='canvas'></canvas>
+    
+	<span id="debugtext">swipe!</span>
+	<div  id="mydiv">
+		<canvas id='canvas'></canvas>
+	</div>
